Java + HttpClient (#555)